--- a/css/main.css
+++ b/css/main.css
@@ -1347,6 +1347,19 @@
     position: relative;
     text-align: center;
 }
+ #volunteering {
+    background: #01010fe8 url(../images/volunteer.jpg) no-repeat center bottom;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100%;
+    min-height: 720px;
+    /* display: table; */
+    position: relative;
+    text-align: center;
+}
 #skilled {
     background: #01010fe8 url(../images/skilled.jpg) no-repeat center bottom;
     -webkit-background-size: cover;
